<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lista_brewjas"
            android:icon="@drawable/ico_brewjas_36dp"
            android:title="@string/nav_brejas" />

        <item
            android:id="@+id/nav_favoritas"
            android:icon="@drawable/ic_favorite_white_36dp"
            android:title="@string/nav_fav" />

        <item
            android:id="@+id/nav_cervejarias"
            android:icon="@drawable/ic_store_black_36dp"
            android:title="@string/nav_cervejarias" />

        <item
            android:id="@+id/nav_estilos"
            android:icon="@drawable/ic_style_black_36dp"
            android:title="@string/nav_estilos" />

        <item
            android:id="@+id/nav_conta"
            android:icon="@drawable/ic_person_black_36dp"
            android:title="@string/nav_conta" />
    </group>

</menu>
