<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cadastro"
    tools:context=".ui.view.activity.RegisterActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:background="@drawable/bg_transparent_yellow">

        <LinearLayout
            android:id="@+id/contentPanel"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/style_rounded_box_form"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin_big"
                android:text="@string/txt_intro_registro"
                style="@style/TxtTitleForms"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    style="@style/TxtHint"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_nome"
                    android:background="@drawable/rounded_edt_padrao"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/edtLogin"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    style="@style/TxtHint"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:background="@drawable/rounded_edt_padrao"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btnDataNasc"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    style="@style/TxtHint"
                    android:hint="@string/hint_data_nasc"
                    android:background="@drawable/rounded_edt_padrao"
                    android:textAlignment="textStart"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_edt_padrao">

                <Spinner
                    android:id="@+id/spinnerGenero"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:popupBackground="@drawable/rounded_edt_padrao"
                    android:popupElevation="5dp">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/btn_registro"
                    style="@style/TxtBtn"
                    android:id="@+id/btnEnviar"
                    android:background="@drawable/rounded_btn_padrao"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <include layout="@layout/app_bar"/>


</RelativeLayout>
