<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.brewjas.ui.fragment.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/contentLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="40dp"
                android:src="@drawable/logo"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:id="@+id/contentAcesso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/contentEdt"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="@dimen/login_vertical_margin"
                    android:layout_marginTop="@dimen/login_vertical_margin"
                    android:layout_marginLeft="@dimen/login_horizontal_margin"
                    android:layout_marginRight="@dimen/login_horizontal_margin"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/rounded_edt_padrao_login">

                    <EditText
                        android:id="@+id/edtLogin"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        style="@style/TxtHint"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email"
                        android:background="@drawable/rounded_edt_padrao_login"/>

                    <ImageButton
                        android:id="@+id/btnLogin"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_btn_login"
                        android:src="@drawable/ic_keyboard_arrow_right_white_48dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contentLogin"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="@dimen/login_vertical_margin"
                    android:layout_marginTop="@dimen/login_vertical_margin"
                    android:layout_marginLeft="@dimen/login_horizontal_margin"
                    android:layout_marginRight="@dimen/login_horizontal_margin"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@id/contentEdt"
                    android:background="@drawable/rounded_btn_facebook">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:text="@string/btn_login_fb"
                        style="@style/TxtBtn"
                        android:paddingLeft="16dp"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/btnFacebook"
                        android:textAlignment="textStart"
                        android:background="@android:color/transparent"/>

                    <ImageButton
                        android:id="@+id/btnLoginFb"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_btn_facebook_transparent"
                        android:src="@drawable/ic_keyboard_arrow_right_white_48dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contentregister"
                    android:layout_below="@+id/contentLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/login_vertical_margin"
                    android:layout_marginTop="@dimen/login_vertical_margin"
                    android:layout_marginLeft="@dimen/login_horizontal_margin"
                    android:layout_marginRight="@dimen/login_horizontal_margin"
                    android:gravity="center_horizontal">

                    <Button
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:text="@string/btn_help"
                        style="@style/TxtBtnSmall"
                        android:textColor="@color/colorMarrom"
                        android:id="@+id/btnRegistrar"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
